fix: hidden scroll overflow-y

--- a/style.css
+++ b/style.css
@@ -19,7 +19,11 @@
       background-repeat: no-repeat;
       background-position: center;
       background-attachment: fixed;
+      overflow-y: scroll;
+    }
 
+    body::-webkit-scrollbar{
+      display: none;
     }
 
     .logo-Container{
